src/objects/appsolutely__Creditsafe_Company_Share_Holder__c.object
<CustomObject>
    <description>Information on a share holder.</description>
    <fields>
        <fullName>appsolutely__City__c</fullName>
        <description>The City of the Address.</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Country__c</fullName>
        <description>The Country of the Address.</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Creditsafe_Company_Report_Full__c</fullName>
        <description>A detailed report about a company.</description>
        <label>Creditsafe Company Report</label>
        <referenceTo>appsolutely__Creditsafe_Company_Report_Full__c</referenceTo>
        <relationshipLabel>Share Holders</relationshipLabel>
        <relationshipName>Share_Holders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>appsolutely__Full_Address__c</fullName>
        <description>Full Address</description>
        <label>Full Address</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__House_Number_Addition__c</fullName>
        <description>The House number addition of the Address.</description>
        <label>House Number Addition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__House_Number__c</fullName>
        <description>The House number of the Address.</description>
        <label>House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Name__c</fullName>
        <description>Name of the share holder.</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Postcode__c</fullName>
        <description>The Postcode of the Address.</description>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Share_Percent__c</fullName>
        <description>Percentage this share holder has in shares.</description>
        <label>Share Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>appsolutely__Street__c</fullName>
        <description>The Street of the Address.</description>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Telephone__c</fullName>
        <description>Phone number.</description>
        <label>Telephone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Creditsafe Company Share Holder</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Creditsafe Company ShareHolder</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creditsafe Company Share Holders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>